force-app/main/default/objects/tdc_tsw__Message_Template__c/fields/tdc_tsw__Description__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>