force-app/main/default/objects/tdc_tsw__Message_Template__c/fields/tdc_tsw__Next_SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Next_SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next SMS Template</label>
    <referenceTo>tdc_tsw__Message_Template__c</referenceTo>
    <relationshipLabel>SMS Template</relationshipLabel>
    <relationshipName>SMS_Template</relationshipName>
    <type>Lookup</type>
</CustomField>