force-app/main/default/objects/tdc_tsw__Message_Template__c/fields/tdc_tsw__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Record_Type__c</fullName>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>