force-app/main/default/objects/tdc_tsw__Message_Template__c/fields/tdc_tsw__SMS_Survey__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__SMS_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS Survey</label>
    <referenceTo>tdc_tsw__SMS_Survey__c</referenceTo>
    <relationshipLabel>Survey Questions</relationshipLabel>
    <relationshipName>SMS_Template</relationshipName>
    <type>Lookup</type>
</CustomField>