force-app/main/default/objects/tdc_tsw__Message_Template__c/fields/tdc_tsw__SMSBodyNew__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__SMSBodyNew__c</fullName>
    <label>SMS Body</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>