force-app/main/default/objects/tdc_tsw__Message_Template__c/fields/tdc_tsw__Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Automation</fullName>
                <label>Automation Only</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>