force-app/main/default/objects/tdc_tsw__Message_Template__c/listViews/tdc_tsw__All.listView-meta.xml
<ListView>
    <fullName>tdc_tsw__All</fullName>
    <columns>tdc_tsw__ObjectName__c</columns>
    <columns>tdc_tsw__Folder__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>tdc_tsw__SMSBodyNew__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>